--- a/index.html
+++ b/index.html
@@ -20,19 +20,14 @@
   <div class="container text-center">
     <div class="card">
       <div class="card-body">
-        <form id="search-form" class="row mb-3">
-          <div class="col-8">
-            <input type="search" id="search-value" class="form-control rounded-2 shadow-sm"
+        <form id="search-form" class="row mb-3 px-2">
+          <div class="col-10 p-0">
+            <input type="search" autocomplete="off" id="search-value" class="form-control rounded-2 shadow-sm"
               placeholder="Search city name" />
           </div>
-          <div class="col">
+          <div class="col-2 p-0">
             <button type="submit" class="btn btn-primary shadow-sm">
               Search
-            </button>
-          </div>
-          <div class="col">
-            <button type="button" class="btn btn-info shadow-sm" id="current">
-              Current
             </button>
           </div>
         </form>
