--- a/index.html
+++ b/index.html
@@ -1,66 +1,75 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Weather App</title>
+    <meta charset="UTF-8" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Flex:wght@100;200;300;400;500;600;700;800;900;1000&display=swap"
+      rel="stylesheet"
+    />
 
-<head>
-  <title>Weather App</title>
-  <meta charset="UTF-8" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto+Flex:wght@100;200;300;400;500;600;700;800;900;1000&display=swap"
-    rel="stylesheet" />
+    <link rel="stylesheet" href="src/styles.css" />
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  </head>
 
-  <link rel="stylesheet" href="src/styles.css">
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-</head>
-
-<body>
-  <div class="container text-center">
-    <div class="card">
-      <div class="card-body">
-        <form id="search-form" class="row mb-3 px-2">
-          <div class="col-10 p-0">
-            <input type="search" autocomplete="off" id="search-value" class="form-control rounded-2 shadow-sm"
-              placeholder="Search city name" />
+  <body>
+    <div class="container text-center">
+      <div class="card">
+        <div class="card-body">
+          <form id="search-form" class="row mb-3 px-2">
+            <div class="col-10 p-0">
+              <input
+                type="search"
+                autocomplete="off"
+                id="search-value"
+                class="form-control rounded-2 shadow-sm"
+                placeholder="Search city name"
+              />
+            </div>
+            <div class="col-2 p-0">
+              <button type="submit" class="btn btn-primary shadow-sm">
+                Search
+              </button>
+            </div>
+          </form>
+          <div class="row text-center text-secondary">
+            <h1 class="display-5 fw-bold" id="city-name">-</h1>
+            <p class="mb-0 fs-5" id="date-time"></p>
+            <p class="fs-5" id="description">-</p>
           </div>
-          <div class="col-2 p-0">
-            <button type="submit" class="btn btn-primary shadow-sm">
-              Search
-            </button>
+          <div class="mt-5 mb-5 d-flex justify-content-between">
+            <div class="d-flex">
+              <img src="" id="icon" alt="description" />
+              <h3 class="display-1 fw-bold" id="temp">--</h3>
+              <small class="fs-5 mt-2">
+                <span id="celsius" class="units">°C</span> |
+                <span id="fahrenheit" class="units active">°F</span>
+              </small>
+            </div>
+            <div class="d-flex flex-column align-items-start mx-3">
+              <p class="mb-0">Humidity: <strong id="humidity">-</strong>%</p>
+              <p>Wind: <strong id="wind">-</strong> km/h</p>
+            </div>
           </div>
-        </form>
-        <div class="row text-center text-secondary">
-          <h1 class="display-5 fw-bold" id="city-name">-</h1>
-          <p class="mb-0 fs-5" id="date-time"></p>
-          <p class="fs-5" id="description">-</p>
         </div>
-        <div class="mt-5 mb-5 d-flex justify-content-between">
-          <div class="d-flex mx-3">
-            <h3 class="display-4 fw-bold" id="temperature">
-              <span id="temp">--</span>
-            </h3>
-            <small class="fs-5 mt-1">
-              <span id="celsius" class="units">°C</span> | <span id="fahrenheit" class="units active">°F</span>
-            </small>
-          </div>
-          <div class="d-flex flex-column align-items-start mx-3">
-            <p class="mb-0">Humidity: <strong id="humidity">-</strong>%</p>
-            <p>Wind: <strong id="wind">-</strong> km/h</p>
-          </div>
-        </div>
-      </div>
 
-      <div class="card-footer">
-        <a href="https://github.com/Elhamne/weather-app" target="_blank">Open-source code</a> by Elham
-        Navidi
+        <small class="card-footer">
+          <a href="https://github.com/Elhamne/weather-app" target="_blank"
+            >Open-source code</a
+          >
+          by Elham Navidi
+        </small>
       </div>
     </div>
 
-  </div>
-
-  <script src="src/index.js"></script>
-</body>
-
+    <script src="src/index.js"></script>
+  </body>
 </html>
