Centered humidity and wind speed

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                 <span id="fahrenheit" class="units active">°F</span>
               </small>
             </div>
-            <div class="d-flex flex-column align-items-start mx-3">
-              <p class="mb-0">Humidity: <strong id="humidity">-</strong>%</p>
-              <p>Wind: <strong id="wind">-</strong> km/h</p>
+            <div class="d-flex flex-column align-items-start justify-content-center mx-3">
+              <div>Humidity: <strong id="humidity">-</strong>%</div>
+              <div>Wind: <strong id="wind">-</strong> km/h</div>
             </div>
           </div>
         </div>
