--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
               <div>Wind: <strong id="wind">-</strong> km/h</div>
             </div>
           </div>
+          <div class="row" id="forecast"></div>
         </div>
 
         <small class="card-footer">
