Removed temperature unite change

--- a/index.html
+++ b/index.html
@@ -49,12 +49,11 @@
             <div class="d-flex">
               <img src="" id="icon" alt="description" />
               <h3 class="display-1 fw-bold" id="temp">--</h3>
-              <small class="fs-5 mt-2">
-                <span id="celsius" class="units">°C</span> |
-                <span id="fahrenheit" class="units active">°F</span>
-              </small>
+              <small class="fs-5 mt-2">°C</small>
             </div>
-            <div class="d-flex flex-column align-items-start justify-content-center mx-3">
+            <div
+              class="d-flex flex-column align-items-start justify-content-center mx-3"
+            >
               <div>Humidity: <strong id="humidity">-</strong>%</div>
               <div>Wind: <strong id="wind">-</strong> km/h</div>
             </div>
