Date and time added

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="mt-5 mb-5 d-flex justify-content-between">
             <div class="d-flex">
               <img src="" id="icon" alt="description" />
-              <h3 class="display-1 fw-bold" id="temp">--</h3>
+              <h3 class="display-1 fw-bold mx-1" id="temp">--</h3>
               <small class="fs-5 mt-2">°C</small>
             </div>
             <div
